--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Hello World</title>
 </head>
 <body>
-    <h1>Hello World!</h1>
+    <h1> 
+        <strong>Hello World!</strong>
+    </h1>
+        <h2>Ciao a tutti</h2>
 </body>
 </html>
